--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -4,60 +4,61 @@
 
 <html>
 <head runat="server">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="Content/Style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Catálogo</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
-       <form id="form1" runat="server">
-        
-           <div>
-            <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="/default.aspx">Central de Turnos</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="PreviousEspecialidades.aspx">Especialidades</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="PreviousContactos.aspx">Contacto</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administración</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Agregar turno</a></li>
-                                    <li><a class="dropdown-item" href="#">Modificar turno</a></li>
-                                    <li><a class="dropdown-item" href="#">Eliminar turno</a></li>
-                                    <li><a class="dropdown-item" href="#">Agregar paciente</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Agregar medico</a></li>
-                                    <li><a class="dropdown-item" href="#">Eliminar medico</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">------</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+    <form id="form1" runat="server">
+    <div>
+        <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/default.aspx">Central de Turnos</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="PreviousEspecialidades.aspx">Especialidades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="PreviousContactos.aspx">Contacto</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administración</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Agregar turno</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar turno</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar turno</a></li>
+                                <li><a class="dropdown-item" href="#">Agregar paciente</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Agregar médico</a></li>
+                                <li><a class="dropdown-item" href="#">Eliminar médico</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">------</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
-           <footer style="background-color:lightgray;color:black"><hr />@AppTurnosMedicos</footer>
+            </div>
+        </nav>
+        </header>
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        </asp:ContentPlaceHolder>
+    </div>
     </form>
+    <footer class="col-md-12 d-flex justify-content-center">2022 - TP Cuatrimestral Programación III - Central de Turnos</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
