--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <link href="Content/Style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Catálogo</title>
+    <title>TurnosApp</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -26,10 +26,13 @@
                             <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="PreviousEspecialidades.aspx">Especialidades</a>
+                            <a class="nav-link" href="Especialidades.aspx">Especialidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="PreviousContactos.aspx">Contacto</a>
+                            <a class="nav-link" href="Usuarios.aspx">Usuarios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="listados.aspx">Otros Listados</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administración</a>
