--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="Especialidades.aspx">Especialidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Usuarios.aspx">Usuarios</a>
+                            <a class="nav-link" href="UsuarioListado.aspx">Usuarios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="listados.aspx">Otros Listados</a>
