Se agrega ABM (baja logica) + Modif en listar (para que no cargue inactivos) en TipoDocNeg, PerfilUsuarioNeg, ObraSocNeg, EstadoTurnoNeg y EspecialidadNeg

--- a/TurnosAppWeb/Content/Style.css
+++ b/TurnosAppWeb/Content/Style.css
@@ -8,7 +8,7 @@
 
 html {
     text-decoration: none;
-    //font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
@@ -58,7 +58,7 @@ footer {
     border-color: #39284b;
 }
 
-    .default .btn:hover {
-        background-color: #39284b;
-        border-color: #39284b;
-    }
+.default .btn:hover {
+    background-color: #39284b;
+    border-color: #39284b;
+}
