--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -14,7 +14,7 @@
     <form id="form1" runat="server">
         <div>
             <header>
-                <nav class="navbar navbar-expand-lg">
+                <nav class="navbar sticky-top navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="/default.aspx">Central de Turnos</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,13 +64,13 @@
                     </div>
                 </nav>
             </header>
-            <div class="center-grid default">
-                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                    </asp:ContentPlaceHolder>
+            <div class="container py-4">
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
             </div>
+            <footer class="fixed-bottom mt-2 d-flex justify-content-center">2022 - TP Cuatrimestral Programación III - Central de Turnos</footer>
         </div>
     </form>
-    <footer class="col-md-12 d-flex justify-content-center">2022 - TP Cuatrimestral Programación III - Central de Turnos</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
