--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -36,7 +36,7 @@
                                     <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administrar</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="../Tablas/TurnoForm.aspx">Nuevo Turno</a></li>
-                                        <li><a class="dropdown-item" href="#">Modificar Turno</a></li>
+                                        <li><a class="dropdown-item" href="../Tablas/TurnoListado.aspx">Modificar Turno</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
