--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -24,7 +24,8 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
+                                    <asp:Button id="home" OnClick="home_Click" CssClass="nav-link active"  Text="Home" runat="server" />
+                                    
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../Tablas/UsuarioListado.aspx">Usuarios</a>
