--- a/TurnosAppWeb/TunosWeb.Master
+++ b/TurnosAppWeb/TunosWeb.Master
@@ -17,12 +17,12 @@
             <header>
                 <nav class="navbar sticky-top navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="/default.aspx">Central de Turnos</a>
+                        <a class="navbar-brand" href="">Central de Turnos</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
-                            <ul class="navbar-nav">
+                            <ul class="nav nav-tabs">
                                 <li class="nav-item">
                                     <asp:Button id="home" OnClick="home_Click" CssClass="nav-link active"  Text="Home" runat="server" />
                                     
@@ -31,7 +31,10 @@
                                     <a class="nav-link" href="../Tablas/UsuarioListado.aspx">Usuarios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/listados.aspx">Otros Listados</a>
+                                    <a class="nav-link" href="../Tablas/ProfesionalListado.aspx">Profesionales</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../Tablas/especialidadlistado.aspx">Especialidades</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administrar</a>
